--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -53,10 +53,7 @@ eBPF supports AKS with Calico CNI and {{prodname}} network policy. However, with
 :::
 
 **Unsupported features**
-- Using NodeLocal DNSCache in your cluster
 - Clusters with some eBPF nodes and some standard dataplane and/or Windows nodes
-- IPv6
-- Host endpoint `doNotTrack` policy (other policy types are supported)
 - Floating IPs
 - SCTP (either for policy or services)
 - `Log` action in policy rules
@@ -74,6 +71,10 @@ For best pod-to-pod performance, we recommend using an underlying network that d
 - An on-prem cluster with BGP peering configured
 
 If you must use an overlay, we recommend that you use VXLAN, not IPIP. VXLAN has better performance than IPIP in eBPF mode due to various kernel optimizations.
+
+Limitations:
+
+  - Switching to eBPF mode from IPVS mode is not supported. You have to switch from IPVS to IPTables mode before switching to eBPF mode.
 
 ## How to
 
