--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -9,14 +9,15 @@ Application layer policies let you configure access controls based on L7 attribu
 ## Before you begin
 
 ### Unsupported
-- {{prodname}} implements application layer policy using Envoy as a DaemonSet. This means you cannot use application layer policy alongside a service mesh like Istio.
-- GKE
+- {{prodname}} implements application layer policy using Envoy as a DaemonSet or sidecars. This means you cannot use application layer policy alongside a service mesh like Istio.
+- GKE (for DaemonSet mode)
 
 ### Limitations
 - Application layer policy supports restricting only ingress traffic
 - Support for L7 attributes are limited to HTTP method and URL exact/prefix path 
 - Supported protocols are limited to TCP-based protocols (for example, HTTP, HTTPS, or gRPC)
 - You can control application layer policies only at the cluster level (not per namespace) 
+- For sidecar mode, the pods needs to be created with the proper label `"applicationlayer.projectcalico.org/sidecar"="true"` for sidecar injection.
 
 ## How to
 - [Enable application layer policies](#enable-application-layer-policies)
@@ -24,16 +25,35 @@ Application layer policies let you configure access controls based on L7 attribu
 - [Disable application layer policies](#disable-application-layer-policies)
 
 ### Enable application layer policies (ALP)
-In the ApplicationLayer custom resource, set the `applicationLayerPolicy` field to Enabled.
+In the ApplicationLayer custom resource, set the `applicationLayerPolicy` field to Enabled for Envoy as a DaemonSet, for using sidecars you will need to set the `sidecarInjection` field to Enabled and label and annotate the pods will have the packets analised.
 
-```yaml                                                                                           
+For **Envoy as Daemonset**:
+
+```yaml
 apiVersion: operator.tigera.io/v1
 kind: ApplicationLayer
 metadata:
-  name: tigera-secure 
+  name: tigera-secure
 spec:
   applicationLayerPolicy: Enabled
   
+```
+
+For **sidecar**:
+
+```yaml
+apiVersion: operator.tigera.io/v1
+kind: ApplicationLayer
+metadata:
+  name: tigera-secure
+spec:
+  sidecarInjection: Enabled
+```
+
+You can patch your deployments enabling sidecar with ALP option:
+
+```bash
+kubectl patch deployment <deployment-name> -n <deployment-namespace> -p '{"spec":{"template":{"metadata":{"labels":{"applicationlayer.projectcalico.org/sidecar":"true"},"annotations":{"applicationlayer.projectcalico.org/policy":"Enabled"}}}}}'
 ```
 
 ### Enforce application layer policies for ingress traffic
@@ -63,6 +83,8 @@ spec:
 ### Disable application layer policies
 
 To disable the policies, do one of the following steps:
- - Set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
+ - For sidecar mode, recreate your application pods without the sidecar label and annotations.
+ - For Envoy as DaemonSet mode, set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
  - Remove the `applicationLayerPolicy` field entirely.
- - Delete the ApplicationLayer` custom resource.
+ - Remove the `sidecarInjection` field entirely, if sidecar mode was being used only for ALP.
+ - Delete the ApplicationLayer` custom resource if only ALP was enabled on it.
