--- a/calico-enterprise/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise/visibility/elastic/l7/configure.mdx
@@ -94,7 +94,7 @@ In this step, you will configure L7 logs, select logs for collection, and test t
 
 1. Apply the resource. This creates `l7-log-collector` daemonset in `calico-system` namespace.
 
-1. Ensure that the daemonset progresses and `l7-collector` daemonset is fully deployed.
+1. Ensure that the daemonset progresses and is fully deployed.
 
 **Select traffic for L7 log collection**
 
